RESOLVED FIXED261044
Some code incorrectly compares Document objects using CSSParserContext's comparison operator
https://bugs.webkit.org/show_bug.cgi?id=261044
Summary Some code incorrectly compares Document objects using CSSParserContext's comp...
Chris Dumez
Reported 2023-09-01 13:09:11 PDT
Mark CSSParserContext constructors as explicit. We have some code incorrectly comparing Document objects by value and the code builds because it is implicitly converting the Documents to CSSParserContexts and calling CSSParserContext's operator==().
Attachments
Chris Dumez
Comment 1 2023-09-01 13:38:49 PDT
EWS
Comment 2 2023-09-01 22:08:15 PDT
Committed 267577@main (1dc257f3194c): <https://commits.webkit.org/267577@main> Reviewed commits have been landed. Closing PR #17356 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-09-01 22:09:16 PDT
Note You need to log in before you can comment on or make changes to this bug.