Some code incorrectly compares Document objects using CSSParserContext's comparison operator https://bugs.webkit.org/show_bug.cgi?id=261044

Reviewed by Ryosuke Niwa and Darin Adler.

Use a named operator==() in CSSParserContext to avoid so that can no longer
happen and fix code doing bad comparisons.

* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::operator==): Deleted.
* Source/WebCore/css/parser/CSSParserContext.h:
* Source/WebCore/editing/cocoa/EditorCocoa.mm:
(WebCore::Editor::replaceNodeFromPasteboard):
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::checkPopoverValidity):
* Source/WebCore/page/csp/ContentSecurityPolicy.cpp:
(WebCore::ContentSecurityPolicy::reportViolation const):

Canonical link: https://commits.webkit.org/267577@main